[gd_scene load_steps=8 format=2]

[ext_resource path="res://grid/GridVisionTime.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/font_small.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/Countdown.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 4 )

[node name="GridVisionTime" type="Node2D"]
script = ExtResource( 1 )

[node name="Grid" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01

[node name="PosLabel" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 64.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 64.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_right = 64.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_right = 64.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Toolbar" type="MarginContainer" parent="."]
margin_right = 354.0
margin_bottom = 434.0
rect_min_size = Vector2( 474, 434 )
theme = SubResource( 2 )
custom_constants/margin_right = 30
custom_constants/margin_left = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Toolbar"]
margin_left = 30.0
margin_right = 444.0
margin_bottom = 434.0
custom_constants/separation = 50

[node name="VBoxContainer6" type="VBoxContainer" parent="Toolbar/VBoxContainer"]
margin_top = 368.0
margin_right = 414.0
margin_bottom = 434.0
size_flags_vertical = 10
custom_constants/separation = 18

[node name="Label" type="Label" parent="Toolbar/VBoxContainer/VBoxContainer6"]
margin_right = 414.0
margin_bottom = 24.0
text = "Record"

[node name="HBoxContainer" type="HBoxContainer" parent="Toolbar/VBoxContainer/VBoxContainer6"]
margin_top = 42.0
margin_right = 414.0
margin_bottom = 66.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Toolbar/VBoxContainer/VBoxContainer6/HBoxContainer"]
margin_right = 120.0
margin_bottom = 24.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Toolbar/VBoxContainer/VBoxContainer6/HBoxContainer/VBoxContainer"]
margin_right = 120.0
margin_bottom = 24.0
text = "Time:"

[node name="VBoxContainer2" type="VBoxContainer" parent="Toolbar/VBoxContainer/VBoxContainer6/HBoxContainer"]
margin_left = 150.0
margin_right = 342.0
margin_bottom = 24.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Toolbar/VBoxContainer/VBoxContainer6/HBoxContainer/VBoxContainer2"]
margin_right = 192.0
margin_bottom = 24.0
text = "00:00:00"

[node name="Countdown" parent="." instance=ExtResource( 5 )]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="countdown_finished" from="Countdown" to="." method="_on_Countdown_countdown_finished"]
